src/tests/integer_expression/snapshots/monkey_interpreter__tests__integer_expression__test_integer_expression_case_1_environment.snap
---
source: src/tests/integer_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {},
            enclosing: None,
        },
    },
}
