src/tests/integer_expression/snapshots/monkey_interpreter__tests__integer_expression__test_integer_expression_case_1_lexical_analysis.snap
---
source: src/tests/integer_expression/mod.rs
assertion_line: 14
expression: tokens
---
[
    PositionedToken {
        token: Integer {
            literal: 5,
        },
        position: Position {
            line: 1,
            column: 1,
        },
    },
]
