src/tests/integer_expression/snapshots/monkey_interpreter__tests__integer_expression__test_integer_expression_case_1_syntax_analysis.snap
---
source: src/tests/integer_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Integer {
            literal: 5,
        },
    },
]
