src/tests/integer_expression/snapshots/monkey_interpreter__tests__integer_expression__test_integer_expression_case_2_evaluation.snap
---
source: src/tests/integer_expression/mod.rs
expression: evaluation
---
Integer {
    value: 123,
}
