src/tests/integer_expression/snapshots/monkey_interpreter__tests__integer_expression__test_integer_expression_case_2_lexical_analysis.snap
---
source: src/tests/integer_expression/mod.rs
assertion_line: 14
expression: tokens
---
[
    PositionedToken {
        token: Integer {
            literal: 123,
        },
        position: Position {
            line: 1,
            column: 3,
        },
    },
]
